<resources>
    <string name="app_name">GSP_RecursoHumano</string>
    <string name="action_settings" translatable="false">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="titulo_crear">CREAR EMPLEADOS</string>
    <string name="cedula">Cédula</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="celular">Celular</string>
    <string name="correo">Correo Electronico</string>
    <string name="guardar">GUARDAR</string>
    <string name="limpiar">LIMPIAR</string>
    <string name="titulo_detalle">DETALLE EMPLEADOS</string>
    <string name="vinculacion">Tipo de Vinculación</string>
    <string name="diruofi">Dirección u Oficina</string>
    <string name="ops">OPS</string>
    <string name="provisional">Provisional</string>
    <string name="libre_nombramiento">Libre Nombramiento y remoción</string>
    <string name="carrera_adm">Carrera Administrativa</string>
    <string name="salud_publica">Dirección de Salud Pública</string>
    <string name="apoyo_gestion">Oficina de Apoyo a la Gestión</string>
    <string name="atencion_ciudadano">Oficina de Atención al Ciudadano y Participación Social</string>
    <string name="gestion_servicios">Dirección de Gestión de Servicios de Salud y Aseguramiento</string>
    <string name="empleado_creado">Empleado creado exitosamente</string>
    <string name="enunciado_vinculacion">Seleccione el tipo de vinculación:</string>
    <string name="enunciado_diruofi">Seleccione la Dirección u Oficina a que pertenece:</string>
    <string name="seleccionar_foto">Seleccione la foto del empleado</string>
    <string name="titulo_eliminar">Eliminar Empleado</string>
    <string name="mensaje_eliminar">¿Está seguro de eliminar este empleado?</string>
    <string name="mensaje_positivo">Si</string>
    <string name="mensaje_negativo">No</string>
    <string name="eliminar">Eliminar</string>
    <string name="mensaje_error_cedula">Digite la cédula</string>
    <string name="mensaje_error_nombre">Digite el nombre</string>
    <string name="mensaje_error_apellido">Digite el apellido</string>
    <string name="mensaje_error_celular">Digite el numero de celular</string>
    <string name="mensaje_error_correo">Digite el correo electronico</string>
    <string name="mensaje_existente">El empleado ya existe</string>

    <string-array name="ArraVinculacion">
        <item>@string/ops</item>
        <item>@string/provisional</item>
        <item>@string/libre_nombramiento</item>
        <item>@string/carrera_adm</item>
    </string-array>

    <string-array name="ArraDiruOfi">
        <item>@string/apoyo_gestion</item>
        <item>@string/salud_publica</item>
        <item>@string/atencion_ciudadano</item>
        <item>@string/gestion_servicios</item>
    </string-array>
</resources>