<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CrearEmpleado">

    <TextView
        android:id="@+id/lblTituloCrear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_crear"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imgFotoSeleccionada"
        android:layout_width="222dp"
        android:layout_height="165dp"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <EditText
        android:id="@+id/txtCedula"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/cedula"
        android:inputType="number" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nombres"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/apellidos"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/lblEnumVinculacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:text="@string/enunciado_vinculacion"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/cmbTipoVinculacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp" />

    <TextView
        android:id="@+id/lblEnumDiruOfi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:text="@string/enunciado_diruofi"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/cmbDirecciónuOficina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp" />

    <EditText
        android:id="@+id/txtCelular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3sp"
        android:ems="10"
        android:hint="@string/celular"
        android:inputType="phone" />

    <EditText
        android:id="@+id/txtCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/correo"
        android:inputType="textEmailAddress" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3sp"
            android:layout_marginTop="3sp"
            android:layout_marginRight="3sp"
            android:layout_weight="1"
            android:onClick="guardar"
            android:text="@string/guardar"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnLimpiar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3sp"
            android:layout_marginTop="3sp"
            android:layout_marginRight="3sp"
            android:layout_weight="1"
            android:onClick="limpiar"
            android:text="@string/limpiar"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>